--- a/bukkit.yml
+++ b/bukkit.yml
@@ -7,7 +7,7 @@ settings:
   connection-throttle: 4000
   query-plugins: true
   deprecated-verbose: default
-  shutdown-message: Server cerrado
+  shutdown-message: Server closed
   minimum-api: none
   use-map-color-cache: true
 spawn-limits:
