--- a/config/paper-global.yml
+++ b/config/paper-global.yml
@@ -55,11 +55,11 @@ logging:
 messages:
   kick:
     authentication-servers-down: <lang:multiplayer.disconnect.authservers_down>
-    connection-throttle: Coneccion sofocada! Porfavor espera antes de reconectarte.
+    connection-throttle: Connection throttled! Please wait before reconnecting.
     flying-player: <lang:multiplayer.disconnect.flying>
     flying-vehicle: <lang:multiplayer.disconnect.flying>
-  no-permission: <red>Lo siento, pero no tenes permiso para usar este comando.
-    Porfavor contacta con algun administrador si crees que es un error.
+  no-permission: <red>I'm sorry, but you do not have permission to perform this command.
+    Please contact the server administrators if you believe that this is in error.
   use-display-name-in-quit-message: false
 misc:
   fix-entity-position-desync: true
