--- a/server.properties
+++ b/server.properties
@@ -1,58 +1,63 @@
-#Minecraft server properties
-#Sun Sep 04 16:33:58 ART 2022
-enable-jmx-monitoring=false
-rcon.port=25575
-level-seed=
-gamemode=survival
-enable-command-block=false
-enable-query=false
-generator-settings={}
-enforce-secure-profile=false
-level-name=world
-motd=server
-query.port=25565
-pvp=true
-generate-structures=true
-max-chained-neighbor-updates=1000000
-difficulty=hard
-network-compression-threshold=512
-max-tick-time=60000
-require-resource-pack=false
-max-players=10
-use-native-transport=true
-online-mode=false
-enable-status=true
+accepts-transfers=false
 allow-flight=false
-broadcast-rcon-to-ops=false
-view-distance=7
-resource-pack-prompt=
-server-ip=
 allow-nether=true
-server-port=25565
-enable-rcon=false
-sync-chunk-writes=false
-op-permission-level=4
-prevent-proxy-connections=false
-hide-online-players=false
-resource-pack=
-entity-broadcast-range-percentage=100
-simulation-distance=4
-rcon.password=
-player-idle-timeout=0
-force-gamemode=false
-debug=false
-rate-limit=0
-hardcore=false
-white-list=false
 broadcast-console-to-ops=false
-spawn-npcs=true
-previews-chat=false
-spawn-animals=true
-function-permission-level=2
-level-type=minecraft\:normal
-text-filtering-config=
-spawn-monsters=true
+broadcast-rcon-to-ops=false
+bug-report-link=
+debug=false
+difficulty=hard
+enable-command-block=false
+enable-jmx-monitoring=false
+enable-query=false
+enable-rcon=false
+enable-status=true
+enforce-secure-profile=false
 enforce-whitelist=false
-spawn-protection=0
-resource-pack-sha1=
+entity-broadcast-range-percentage=100
+force-gamemode=false
+function-permission-level=2
+gamemode=survival
+generate-structures=true
+generator-settings={}
+hardcore=false
+hide-online-players=false
+initial-disabled-packs=
+initial-enabled-packs=vanilla
+level-name=world
+level-seed=
+level-type=minecraft\:normal
+log-ips=true
+max-chained-neighbor-updates=1000000
+max-players=10
+max-tick-time=60000
 max-world-size=29999984
+motd=server
+network-compression-threshold=512
+online-mode=false
+op-permission-level=4
+pause-when-empty-seconds=-1
+player-idle-timeout=0
+prevent-proxy-connections=false
+pvp=true
+query.port=25565
+rate-limit=0
+rcon.password=
+rcon.port=25575
+region-file-compression=deflate
+require-resource-pack=false
+resource-pack=
+resource-pack-id=
+resource-pack-prompt=
+resource-pack-sha1=
+server-ip=
+server-name=Unknown Server
+server-port=25565
+simulation-distance=4
+spawn-monsters=true
+spawn-protection=0
+sync-chunk-writes=false
+text-filtering-config=
+text-filtering-version=0
+use-native-transport=true
+view-distance=7
+white-list=false
