--- a/spigot.yml
+++ b/spigot.yml
@@ -26,6 +26,8 @@ settings:
   log-villager-deaths: true
   log-named-deaths: true
   attribute:
+    maxAbsorption:
+      max: 2048.0
     maxHealth:
       max: 2048.0
     movementSpeed:
@@ -59,6 +61,12 @@ advancements:
   - minecraft:story/disabled
 world-settings:
   default:
+    unload-frozen-chunks: false
+    seed-ancientcity: 20083232
+    seed-trailruins: 83469867
+    seed-trialchambers: 94251327
+    seed-buriedtreasure: 10387320
+    seed-mineshaft: default
     below-zero-generation-in-existing-chunks: true
     dragon-death-sound-radius: 0
     view-distance: default
@@ -76,6 +84,8 @@ world-settings:
     nerf-spawner-mobs: false
     hanging-tick-frequency: 100
     growth:
+      torchflower-modifier: 100
+      pitcherplant-modifier: 100
       cactus-modifier: 100
       cane-modifier: 100
       melon-modifier: 100
@@ -128,6 +138,7 @@ world-settings:
     hopper-amount: 1
     hopper-can-load-chunks: false
     entity-tracking-range:
+      display: 128
       players: 48
       animals: 48
       monsters: 48
